Add input range for rating filter
reducers/
 - Add `SET_MINIMUM_RATING`
 - Add exported `initialState`

styles.css
  - New styles for rating filter

NowPlaying.js
 - Filter movies based on `ratingMinimum`
 - Add `ratingMinimum` to props

Header.js
 -  Import `setMinimumRating` action and `RatingFilter` component
 - Update `propTypes`
 - Rename `action` to `fetchMovies`
 - Add `ratingMinimum` and `setMinimumRating` to props
 - Add `RatingFilter` to `Header` component
 - Use `mapStateToProps` for new stateProps (`genreNames` added for next filter)

RatingFilter.js
 - New component

actions/
 - Add `SET_MINIMUM_RATING`

Reducer.test.js
 - Import `initialState`
 - Update expected values
 - Add `SET_MINIMUM_RATING` test

NowPlaying.test.js
 - Add filter test

Header.test.js
  - Update test to check for `RatingFilter`

RatingFilter.test.js
  - New tests

package.json
 - add `react-input-range` package

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,3 +7,24 @@
 .ui.card:first-child {
   margin-top: 1em;
 }
+
+.rating-filter{
+  display: inline-block;
+  width: 200px;
+  margin: 20px;
+}
+
+.rating-filter__display{
+  position: relative;
+  margin-top: 5px;
+}
+
+.rating-filter__display-mask{
+  position: absolute;
+  display: block !important;
+  right:0;
+  margin-top: -20px;
+  height: 20px;
+  background-color: #fff;
+  overflow: hidden;
+}
