Add genre filter
reducers/
 - Add `SET_ACTIVE_GENRES`
 - Update `RECEIVE_GENRES` - parse genres ids as integers
 - Add `genresLoading` prop

styles.css
  - Add  genre filter styles

NowPlaying.js
 - Add `movieHasActiveGenre()`
 - Add genre check to movie `map()`
 - Update props

Header.js
 - Import `setMinimumRating()` dispatcher
 - Add `GenreFilter` component
 - Refactor for code styling

LabelledCheckbox.js
 - New component

GenreFilter.js
 - New component

actions/
 - add `SET_ACTIVE_GENRES`, `changedActiveGenres()` and `setActiveGenres()`

Reducer.test.js
 - Update expected states
 - add `SET_ACTIVE_GENRES` tests

NowPlaying.test.js
 - Update expected states
 - Add ’should filter inactive genres' tests

Header.test.js
 - Update component props
 -

LabelledCheckbox.test.js
GenreFilter.test.js
 - New tests

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,3 +28,29 @@
   background-color: #fff;
   overflow: hidden;
 }
+
+.genre-filter{
+  border: none;
+}
+
+.genre-filter__genre{
+  display: inline-block;
+  margin: 5px;
+}
+
+.genre-filter__genre input{
+  display: none;
+}
+
+.genre-filter__genre label{
+  cursor: pointer;
+}
+
+.genre-filter__genre input:checked + label .genre-filter__genre-label{
+  color: #fff;
+  background: #080;
+}
+
+.genre-filter__genre-label{
+  user-select: none;
+}
