--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@ body{
   background: #ccc;
 }
 
-h1, h2 {
+h1, h2, h4 {
   text-align: center;
 }
 
@@ -101,4 +101,64 @@ header .ui.tag.labels .label:after{
 .movie.ui.card {
   border-radius: 20px 0;
   overflow: hidden;
+}
+
+.loading-indicator__ellipsis {
+  display: block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+  margin: 0 auto;
+}
+.loading-indicator__ellipsis div {
+  position: absolute;
+  top: 27px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background: #333;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+header .loading-indicator__ellipsis div {
+  background: #ccc;
+}
+.loading-indicator__ellipsis div:nth-child(1) {
+  left: 6px;
+  animation: loading-indicator__ellipsis1 0.6s infinite;
+}
+.loading-indicator__ellipsis div:nth-child(2) {
+  left: 6px;
+  animation: loading-indicator__ellipsis2 0.6s infinite;
+}
+.loading-indicator__ellipsis div:nth-child(3) {
+  left: 26px;
+  animation: loading-indicator__ellipsis2 0.6s infinite;
+}
+.loading-indicator__ellipsis div:nth-child(4) {
+  left: 45px;
+  animation: loading-indicator__ellipsis3 0.6s infinite;
+}
+@keyframes loading-indicator__ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes loading-indicator__ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes loading-indicator__ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(19px, 0);
+  }
 }
